# attendance-checkin

./: README.md  attendance_checkin.py  genesis.py
attendance_checkin/: Cargo.toml
attendance_checkin/src/: main.rs
