[package]
name = "attendance_checkin"
version = "0.1.0"
authors = ["Sanjay K <sanjaykdragon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "cookies"] }
tokio = { version = "0.2", features = ["full"] }